Comecei a escrever o conteúdo

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 <body>
     <main>
         <header>
-            <h1>Título do Site</h1>
+            <h1>Cursos Grátis</h1>
         </header>
         <article>
-            <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <h2>Curso de HTML5 com CSS3</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem quam tempora placeat tenetur eveniet delectus sed, laboriosam consectetur reiciendis fugiat, deserunt saepe animi ipsam commodi, libero illo quaerat ipsum rerum.</p>
         </article>
         <article>
-            <h2>Artigo 002</h2>
-            <p>Texto Artigo 002</p>
+            <h2>Curso de JavaScript</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Delectus ut, illo adipisci non qui quasi provident similique vel explicabo placeat repellat repellendus aspernatur quae reprehenderit quod! Recusandae culpa nam eveniet?</p>
         </article>
     </main>
 </body>
